--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js Azure apps testing procedures.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
